<resources>
    <string name="app_name">Calorie Calculator</string>
    <string name="server_client_id">"459950295598-13r5lk3c6htsdfcpjr9f0kdtnhgu22c7.apps.googleusercontent.com"</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="name_meal_activity">MealActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Sign In Form -->
    <string name="birthday">Birthday:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="cm">cm</string>
    <string name="kg">Kg</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="af0_hint">1.2</string>
    <string name="af0_text">Mostly sitting</string>
    <string name="af1_hint">1.375</string>
    <string name="af1_text">Light active </string>
    <string name="af2_hint">1.55</string>
    <string name="af2_text">Moderate active </string>
    <string name="af3_hint">1.725</string>
    <string name="af3_text">Very active</string>
    <string name="af4_hint">1.9</string>
    <string name="af4_text">Extra active</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="choose_activity_factor">Choose Your Activity Factor:</string>

    <!-- Meals Menu -->
    <string name="add_meal">Add Meal</string>
    <string name="meals_title">Meals</string>
    <string name="meal_date">Date:</string>
    <string name="meal_time">Time:</string>
    <string name="compose_your_meal">Compose Your Meal</string>
    <string name="meal_item_search_button_description">for searching food item to compose the meal</string>
    <string name="search_meal_item_hint">search for …</string>
    <string name="search_meal_item_button_description">search meal item</string>
    <string name="food_thumbnail">food thumbnail</string>

    <!-- Searchable Activity -->
    <string name="activity_label">Search Feature</string>
    <string name="search_hint">Search Food</string>
    <string name="search_view">Enter search</string>
    <string name="search_food">Search Food</string>
    <string name="welcome">Welcome</string>

    <!-- Daily Progress Activity -->
    <string name="prev_week_desc">Navigate previous week</string>
    <string name="next_week_desc">Navigate next week</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="compose_a_meal">compose a meal</string>
    <string name="app_icon_image_view_desc">app_icon</string>
    <string name="time_format">HH:MM</string>
</resources>
