<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_700"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="HELP" />

    <ScrollView
        android:id="@+id/signInFormScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/birthdayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/birthdayTextView"
                    style="@style/form_text"
                    android:text="@string/birthday" />

                <EditText
                    android:id="@+id/birth_date_edit_text"
                    style="@style/form_fields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/date_format"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/heightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthdayLayout">

                <TextView
                    android:id="@+id/heightTextView"
                    style="@style/form_text"
                    android:labelFor="@id/height_edit_text"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/height_edit_text"
                    style="@style/form_fields"
                    android:autofillHints=""
                    android:ems="2"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/heightUnitTextView"
                    style="@style/form_text"
                    android:text="@string/cm" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weightLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/heightLayout">

                <TextView
                    android:id="@+id/weightTextView"
                    style="@style/form_text"
                    android:labelFor="@id/weight_edit_text"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/weight_edit_text"
                    style="@style/form_fields"
                    android:autofillHints=""
                    android:ems="2"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/weightUnitTextView"
                    style="@style/form_text"
                    android:text="@string/kg" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/gender_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weightLayout">

                <RadioButton
                    android:id="@+id/femaleButton"
                    style="@style/sign_in_radio_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/female_radio_button_bg"
                    android:checked="true"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/maleButton"
                    style="@style/sign_in_radio_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/male_radio_button_bg"
                    android:text="@string/male" />

            </RadioGroup>

            <TextView
                android:id="@+id/activityFactorTextView"
                style="@style/form_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/choose_activity_factor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gender_layout" />

            <RadioGroup
                android:id="@+id/activity_factor_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activityFactorTextView">

                <RadioButton
                    android:id="@+id/activity_factor_button0"
                    style="@style/sign_in_radio_buttons"
                    android:background="@drawable/af0_radio_button_bg"
                    android:checked="true"
                    android:hint="@string/af0_hint"
                    android:text="@string/af0_text" />

                <RadioButton
                    android:id="@+id/activity_factor_button1"
                    style="@style/sign_in_radio_buttons"
                    android:background="@drawable/af1_radio_button_bg"
                    android:hint="@string/af1_hint"
                    android:text="@string/af1_text" />

                <RadioButton
                    android:id="@+id/activity_factor_button2"
                    style="@style/sign_in_radio_buttons"
                    android:background="@drawable/af2_radio_button_bg"
                    android:hint="@string/af2_hint"
                    android:text="@string/af2_text" />

                <RadioButton
                    android:id="@+id/activity_factor_button3"
                    style="@style/sign_in_radio_buttons"
                    android:background="@drawable/af3_radio_button_bg"
                    android:hint="@string/af3_hint"
                    android:text="@string/af3_text" />

                <RadioButton
                    android:id="@+id/activity_factor_button4"
                    style="@style/sign_in_radio_buttons"
                    android:background="@drawable/af4_radio_button_bg"
                    android:hint="@string/af4_hint"
                    android:text="@string/af4_text" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/register_button"
        style="@style/form_buttons"
        android:text="@string/lets_start"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInFormScrollView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
